<resources>
    <string name="app_name">Socializent</string>
    <string name="loginButton">logın</string>
    <string name="user_name">\t User Name</string>
    <string name="password">\t Password</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password_text">ohh...forgot password?</string>
    <string name="loginText">Login</string>
    <string name="currentRateText">0.0</string>
    <string name="fb_login_protocol_scheme">fb780443785454824</string>
    <string name="action_settings">Logout</string>
    <string name="first_fragment">My Profile</string>
    <string name="second_fragment">My Upcoming Events</string>
    <string name="third_fragment">My Past Events</string>
    <string name="fourth_fragment">My Friends</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="rateText">Event Rate: </string>

    <string name="permission_rationale_location">Access to location services is required.</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="map_gps_warning">If you cannot see your location, please check your device\'s GPS settings.</string>
    <string name="choose_location">Please choose event location</string>

    <string name="user_short_info">User Short Info</string>
    <string name="android_profile_ui_design">Android Profile UI Design</string>
    <string name="android_profile_xml_ui_design">Android Profile XMl UI Design</string>

    <string name="user_profile_name">User Name</string>
    <string name="map_loc_warning">Invisible Current Location, directing to default location...</string>
    <string name="string_event_place">Event Place </string>
    <string name="string_event_title">Title </string>
    <string name="string_event_time">Time/Date</string>
    <string name="string_event_fee">Fee</string>
    <string name="string_event_participant_c">Participant Count</string>
    <string name="string_event_tags">Tags</string>
    <string name="string_event_date">Date</string>
    <string name="string_event_description">Description</string>
    <string name="dateTimeChoice">Please choose the time and date</string>
    <string name="facebook_app_id">780443785454824</string>
    <string name="celebration">Celebration</string>
    <string name="concert">Concert</string>
    <string name="conference">Conference</string>
    <string name="lecture">Lecture</string>
    <string name="party">Party</string>
    <string name="study">Study</string>
    <string name="travel">Travel</string>
    <string name="movie_screen">Movie Screening</string>
    <string name="sports">Sports</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="place">Place:</string>
    <string name="category">Category:</string>
    <string name="date_time_tag">Date/Time:</string>
    <string name="loading">Loading...</string>
    <string name="submit_rate">Submit Rate</string>
    <string name="see_comments">See Comments</string>
    <string name="go_back">Go Back</string>
    <string name="delete">DELETE</string>
    <string name="edit">EDIT</string>
    <string name="leave">LEAVE</string>
    <string name="join">JOIN!</string>
    <string name="description">Description:</string>
    <string name="organizer">Organizer:</string>
    <string name="participant_count">Participant Count:</string>
    <string name="fee">Fee:</string>
    <string name="address">Address:</string>
    <string name="title">Title:</string>
    <string name="event_details">Event Details</string>
    <string name="type_your_comment_here">Type your comment here!!!</string>
    <string name="send_comment">send comment</string>

</resources>
