<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="40dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:id="@+id/linearLayout3">

        <TextView
            android:id="@+id/eventDetailForm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:text="Event Details"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp">

        <TextView
            android:id="@+id/placeTag"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:text="Place: "
            android:textSize="20dp" />

        <TextView
            android:id="@+id/addressView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="360dp"
        android:layout_height="600dp"
        android:orientation="horizontal"
        android:layout_marginTop="90dp"
        android:layout_alignTop="@+id/linearLayout3"
        android:layout_alignParentStart="true">

        <EditText
            android:id="@+id/titleView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/string_event_title" />

        <EditText
            android:id="@+id/timeView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:focusableInTouchMode="false"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleView"
            android:inputType="text"
            android:hint="@string/string_event_time"/>

        <EditText
            android:id="@+id/feeView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/timeView"
            android:hint="@string/string_event_fee" />

        <EditText
            android:id="@+id/participantCountView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/feeView"
            android:hint="@string/string_event_participant_c"/>
            <!--android:inputType="number"-->

        <EditText
            android:id="@+id/tagsView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/participantCountView"
            android:hint="@string/string_event_tags" />

        <EditText
            android:id="@+id/descriptionView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/tagsView"
            android:hint="@string/string_event_description"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/createEventButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create"
            android:layout_marginEnd="42dp"
            android:layout_alignBaseline="@+id/cancelButton"
            android:layout_alignBottom="@+id/cancelButton"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:layout_marginStart="44dp"
            android:layout_marginTop="55dp"
            android:layout_below="@+id/descriptionView"
            android:layout_alignParentStart="true" />

    </RelativeLayout>


</RelativeLayout>