<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="350dp">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/userNameText"
            android:contentDescription=""
            android:src="@mipmap/socializent_image"
            android:visibility="visible"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/userNameText"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/logoView"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="19dp"
            android:background="@drawable/username"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/user_name"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:textSize="24sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/userNameText"
            android:layout_below="@+id/userNameText"
            android:layout_marginTop="14dp"
            android:background="@drawable/password"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType=""
            android:textSize="24sp"
            android:visibility="visible"
            tools:ignore="TextFields" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="402dp"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/forgotPasswordText"
            android:layout_below="@+id/signUpButton"
            android:layout_marginTop="23dp"
            android:background="@drawable/login"
            android:drawablePadding="10dp"
            android:onClick="goToStartScreen" />

        <Button
            android:id="@+id/fbButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/signUpButton"
            android:layout_below="@+id/forgetPasswordButton"
            android:layout_marginEnd="46dp"
            android:layout_marginTop="34dp"
            android:background="@drawable/facebook_logo"
            android:drawablePadding="10dp" />

        <Button
            android:id="@+id/forgetPasswordButton"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="28dp"
            android:layout_toLeftOf="@+id/forgotPasswordText"
            android:layout_toStartOf="@+id/fbButton"
            android:background="@drawable/forget_password"
            android:drawablePadding="10dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignBaseline="@+id/forgetPasswordButton"
            android:layout_alignBottom="@+id/forgetPasswordButton"
            android:layout_alignStart="@+id/fbButton"
            android:drawablePadding="10dp"
            android:text="@string/forgot_password_text" />

        <TextView
            android:id="@+id/singupText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/signUpButton"
            android:layout_alignBottom="@+id/signUpButton"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@+id/signUpButton"
            android:drawablePadding="10dp"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="50dp"
            android:layout_height="52dp"
            android:layout_below="@+id/forgetPasswordButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="101dp"
            android:background="@drawable/signup"
            android:drawablePadding="10dp" />

        <TextView
            android:id="@+id/fbLoginText"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_alignBaseline="@+id/fbButton"
            android:layout_alignBottom="@+id/fbButton"
            android:layout_alignEnd="@+id/forgotPasswordText"
            android:layout_marginEnd="18dp"
            android:drawablePadding="10dp"
            android:text="@string/facebook_login" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginText"
            android:layout_alignBaseline="@+id/loginButton"
            android:layout_alignBottom="@+id/loginButton"
            android:layout_toEndOf="@+id/loginButton"
            android:layout_marginStart="16dp" />

    </RelativeLayout>


</LinearLayout>